fixed alignment for header and body TDs

--- a/client/src/components/Inventory/inventory.css
+++ b/client/src/components/Inventory/inventory.css
@@ -110,24 +110,22 @@ table {
   margin: auto;
 }
 
+thead td {
+  display: flex;
+  background-color: #555;
+  color: #eee;
+  border-right: 1px solid #444;
+}
+
+thead td:last-child {
+  border-right:none;
+}
+
 tr {
   display: flex;
   border-bottom: 1px solid #eee;
   color: #242424;
   align-items: center;
-}
-
-.tr-table-header {
-  min-height: auto;
-  color: #eee;
-
-}
-
-thead {
-  font-weight: bold;
-  background-color: #444444;
-  color: #eee;
-
 }
 
 tr:last-child {
@@ -141,7 +139,6 @@ td {
   justify-content: center;
   align-items: center;
   padding: 7px 0;
-
 }
 
 fieldset {
@@ -151,15 +148,17 @@ fieldset {
   justify-content: center;
 }
 
+
 td.item-description {
-  flex: 1.5;
-  font-size: 2px;
+  text-align: center;
+  flex: 2;
+  font-size: 8px;
 }
 
-
 .heading-description {
-  text-align: center;
-  flex: 1.5;
+  display: flex;
+  justify-content: center;
+  width:202px;
 }
 
 .dynamic-inputs {
@@ -239,7 +238,4 @@ td.item-description {
     padding: 10px;
   }
 
-  td img {
-    display: none;
-  }
 }
