--- a/client/src/components/Inventory/popups/popup.css
+++ b/client/src/components/Inventory/popups/popup.css
@@ -20,7 +20,7 @@
 
 .popup thead {
   background-color: #ccc;
-  color: #242424;
+  /* color: #242424; */
   padding: 10px;
   width: 40%;
 }
